[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprite_main_menu/Start_button_hover.png" type="Texture" id=1]
[ext_resource path="res://sprite_main_menu/wallpapersden.com_77215-1024x600.jpg" type="Texture" id=2]
[ext_resource path="res://sprite_main_menu/Start_button.png" type="Texture" id=3]
[ext_resource path="res://sprite_main_menu/titre.png" type="Texture" id=4]
[ext_resource path="res://MainMenu.gd" type="Script" id=5]
[ext_resource path="res://Graphics/ITS.png" type="Texture" id=6]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 5 )

[node name="background" type="TextureRect" parent="."]
margin_top = -1.33484
margin_right = 1025.0
margin_bottom = 598.665
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 338.625
margin_top = 68.6561
margin_right = 675.625
margin_bottom = 139.656
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 430.0
margin_top = 473.0
margin_right = 559.0
margin_bottom = 540.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="TextureButton" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 64, 64 )
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 6

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="mouse_entered" from="Sprite" to="." method="_on_Sprite_mouse_entered"]
[connection signal="mouse_exited" from="Sprite" to="." method="_on_Sprite_mouse_exited"]
[connection signal="pressed" from="Sprite" to="." method="_on_Sprite_pressed"]
